[package]
name = "telegram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }

google-sheets4 = "*"
serde = "^1.0"
serde_json = "^1.0"
chrono-tz = "0.8"
base64 = "0.21"

chrono = { version = "0.4", features = ["serde"] }
[dev-dependencies]
cargo-watch = "8.4.1"
